# proper_scraper_2024

./: .gitignore  README.md  pyproject.toml
proper_scraper_2024/: make_directory.py  wbgapi_module.py  web_connect.py
proper_scraper_2024/app_frontend/: main_app.py
