[tool.poetry]
name = "proper-scraper-2024"
version = "0.1.0"
description = "Simple web-scraper"
authors = ["sooworr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyside6 = {version = "^6.8.0", python = ">=3.12, <3.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
